[package]
name = "rndiag-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rndiag-core = { path = "../rndiag-core" }
rndiag-metrics = { path = "../rndiag-metrics"}
rndiag-server = { path = "../rndiag-server" }
tokio = { version = "1.48.0", features = ["full"] }
argh = "0.1.13"
pnet = { version = "0.34.0", default-features = false, features = ["std", "pnet_transport"] }
regex = "1.12.2"